# fanous-llm-lens

./: .cursorignore  .cursorrules  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: glossary.md
docs/reports/: HANDOVER.md  compare_tokenizers.py  math-framework-replication.md  morphological-gold-standard-analysis.md  phase-a-depth.md  phase-a-probes.md  tokenization-lit-note.md  tokenizer-comparison.md
docs/superpowers/plans/: 2026-06-03-stage1b-weighted-bet-twin-trees.md  2026-06-03-stage1c-dialect-probe.md  2026-06-26-stage2-architecture-ladder.md  2026-06-27-stage2dash2-two-layer-composition-induction.md  2026-06-28-semantic-tokenization.md  2026-06-30-honest-skip-trigrams.md  2026-07-03-stage2c-induction-viz.md  2026-07-15-induction-heads-in-the-wild.md  2026-07-17-induction-ablation.md  2026-07-20-superposition-toy-models-foundation.md  2026-07-23-superposition-geometry.md
docs/superpowers/specs/: 2026-06-03-stage1b-weighted-bet-twin-trees-design.md  2026-06-03-stage1c-dialect-probe-design.md  2026-06-26-stage2-architecture-ladder-design.md  2026-06-27-stage2dash2-two-layer-composition-induction-design.md  2026-06-28-semantic-tokenization-design.md  2026-06-30-honest-skip-trigrams-design.md  2026-07-03-stage2c-induction-viz-design.md  2026-07-12-icl-from-scratch-training-loop-design.md  2026-07-13-probing-methods-ladder-design.md  2026-07-15-induction-heads-in-the-wild-design.md  2026-07-17-induction-ablation-design.md  2026-07-20-superposition-toy-models-foundation-design.md  2026-07-23-superposition-geometry-design.md
eval/prompts/: msa-masri-pairs-v1.json  msa-masri-pairs-v1.md
experiments/embedding-probes/: __init__.py  phase_a_baseline.json  phase_a_depth_results.json  phase_a_results.json  run_baseline.py  run_probes.py  run_probes_depth.py  train_depth_model.py  train_embedding_model.py
notebooks/: 00-rocm-sanity-check.ipynb  01-tokenizer-comparison-msa-masri.ipynb  02-tokenization-101-masri.ipynb  03-whats-inside-the-box-masri.ipynb  04-logit-lens-masri.ipynb  06-attention-probe-pythia.ipynb  attention_divergence_summary.csv  generate_masri_heatmap.py  run_probe.py
notebooks/education/: _generate_context_blind_image.py  corpus.py  induction_viz.py  probe_a_linear_experiment.ipynb  probe_a_linear_reference.ipynb  probes.py  skip_trigrams.py  stage1_a_char_experiment.ipynb  stage1_a_char_reference.ipynb  stage1_b_word_experiment.ipynb  stage1_b_word_reference.ipynb  stage1_c_subword_experiment.ipynb  stage1_c_subword_reference.ipynb  stage2_a_single_block_experiment.ipynb  stage2_a_single_block_reference.ipynb  stage2_b_multi_head_experiment.ipynb  stage2_b_multi_head_reference.ipynb  stage2_c_depth_induction_experiment.ipynb  stage2_c_depth_induction_reference.ipynb  stage2_d_mlp_experiment.ipynb  stage2_d_mlp_reference.ipynb  stage2_dash2_composition_induction_reference.ipynb  stage2_dash_skip_trigram_bpe_experiment.ipynb  stage2_dash_skip_trigram_reference.ipynb  stage2_dash_skip_trigram_unigram_experiment.ipynb  stage2c_induction_tinystories.ipynb  tiny.py  train_stage2c.py  train_stage2dash.py  train_stage2dash2.py  verify_notebooks.py
notebooks/in_context_learning/: icl_from_scratch.ipynb  induction_ablation.ipynb  induction_heads_in_the_wild.ipynb  train_depth_sweep.py
notebooks/superposition/: superposition_geometry.ipynb  toy_models_of_superposition.ipynb
src/fanous_lens/: __init__.py
src/fanous_lens/tokenizers/: __init__.py  corpora.py  evaluate.py  morphological.py  train.py
tests/education/: test_corpus.py  test_induction_score.py  test_induction_viz.py  test_skip_trigrams.py  test_stage1b_graph.py  test_stage1c_probe.py  test_stage2c_induction.py  test_tiny.py
tests/superposition/: test_geometry.py  test_toy_models.py
tests/test_tokenizers/: test_corpora.py  test_evaluate.py  test_morphological.py  test_train.py
