[project]
name = "fanous-llm-lens"
version = "0.0.1"
description = "Mechanistic interpretability tooling for Egyptian Arabic language models — a lantern (فانوس) for looking inside small LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "barmag" }]
keywords = ["mechanistic-interpretability", "llm", "arabic", "egyptian-arabic", "masri", "transformer-lens"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML — torch installed separately via ROCm index, see README
    "transformers",
    "datasets",
    "accelerate",
    "huggingface-hub",
    "hf-transfer",
    # Mech interp
    "transformer-lens",
    "einops",
    # Visualisation
    "plotly",
    "matplotlib",
    # Notebooks
    "jupyterlab",
    "ipywidgets",
    # Experiment tracking
    "wandb",
    # Utility
    "pydantic>=2",
    "tqdm",
    "rich",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "basedpyright",
    "pytest",
    "pytest-cov",
    "nbstripout",
]

train = [
    "peft",
    "trl",
    "evaluate",
]

[project.urls]
Repository = "https://github.com/barmag/fanous-llm-lens"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fanous_lens"]

# ───────────────────────── Ruff ─────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "experiments", "eval"]
extend-exclude = ["notebooks/*.ipynb_checkpoints", "data", "checkpoints"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "C4",  # flake8-comprehensions
    "ARG", # unused arguments
]
ignore = [
    "E501", # line length — formatter handles it
    "B008", # function calls in argument defaults (common in pydantic / typer)
]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.py" = ["E402", "F401"]  # notebooks have looser rules
"__init__.py" = ["F401"]                # re-exports

# ───────────────────── basedpyright ─────────────────────

[tool.basedpyright]
include = ["src", "experiments", "eval"]
exclude = ["**/__pycache__", "**/.ipynb_checkpoints", "data", "checkpoints", "notebooks"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"

# ──────────────────────── pytest ────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: tests that require a GPU (skipped by default in CI)",
    "slow: tests that take >5s",
]
