[project]
name = "fanous-llm-lens"
version = "0.0.1"
description = "Mechanistic interpretability tooling for Egyptian Arabic language models — a lantern (فانوس) for looking inside small LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "barmag" }]
keywords = ["mechanistic-interpretability", "llm", "arabic", "egyptian-arabic", "masri", "transformer-lens"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML — torch installed separately via ROCm index, see README
    "transformers",
    "datasets",
    "accelerate",
    "huggingface-hub",
    "hf-transfer",
    # Mech interp
    "transformer-lens",
    "einops",
    # Visualisation
    "plotly",
    "matplotlib",
    # Notebooks
    "jupyterlab",
    "ipywidgets",
    # Experiment tracking
    "wandb",
    # Utility
    "pydantic>=2",
    "tqdm",
    "rich",
    "networkx>=3.6.1",
    "scikit-learn>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "basedpyright",
    "pytest",
    "pytest-cov",
    "nbstripout",
]

train = [
    "peft",
    "trl",
    "evaluate",
]

# Static-image export (plotly -> PNG) for committed notebook assets. Separate
# from `dev` because kaleido pulls a headless browser; only needed to
# regenerate images under notebooks/**/images/.
assets = [
    "kaleido",
]

# PyTorch backends — pick EXACTLY ONE per machine (they conflict):
#   uv sync --extra rocm --extra dev   # AMD Strix Halo (gfx1151)
#   uv sync --extra cpu  --extra dev   # CPU / CI / non-AMD contributors
# torch is intentionally NOT a base dependency so a backend is always chosen
# explicitly (this is what stops a stray PyPI CUDA wheel from being resolved).
cpu = ["torch>=2.7"]
# Strix Halo (gfx1151) runs the stable rocm6.2 wheels when masqueraded as gfx1100
# via HSA_OVERRIDE_GFX_VERSION=11.0.0 (see README). torch 2.5.1 is the version on
# that index; pytorch-triton-rocm is its GPU companion.
#
# transformers<5: torch==2.5.1 caps transformer-lens at 2.15.4 (3.x needs
# torch>=2.6), and 2.15.4 imports transformers.TRANSFORMERS_CACHE, removed in
# transformers 5. The cap only binds on this fork; the cpu extra keeps
# transformers 5 + transformer-lens 3.1.0.
rocm = ["torch==2.5.1", "pytorch-triton-rocm", "transformers<5"]

[project.urls]
Repository = "https://github.com/barmag/fanous-llm-lens"

# ───────────────────── uv: PyTorch backend selection ─────────────────────
# rocm wheels come from the stable ROCm 6.2 index (the build that actually
# executes on the Radeon 8060S). Requires HSA_OVERRIDE_GFX_VERSION=11.0.0 at run
# time. Bump the index when a newer ROCm build is verified on this chip.

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "rocm" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-rocm", extra = "rocm" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fanous_lens"]

# ───────────────────────── Ruff ─────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "experiments", "eval"]
extend-exclude = ["notebooks/*.ipynb_checkpoints", "data", "checkpoints"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "C4",  # flake8-comprehensions
    "ARG", # unused arguments
]
ignore = [
    "E501", # line length — formatter handles it
    "B008", # function calls in argument defaults (common in pydantic / typer)
]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.py" = ["E402", "F401", "C408"]  # notebooks: looser rules; plotly uses dict()
"__init__.py" = ["F401"]                # re-exports

# ───────────────────── basedpyright ─────────────────────

[tool.basedpyright]
include = ["src", "experiments", "eval"]
exclude = ["**/__pycache__", "**/.ipynb_checkpoints", "data", "checkpoints", "notebooks"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"

# ──────────────────────── pytest ────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: tests that require a GPU (skipped by default in CI)",
    "slow: tests that take >5s",
]
